unpackaged/main/default/objects/Project_Questions__c/Project_Questions__c.object-meta.xml
<CustomObject>
    <label>Project Questions</label>
    <nameField>
        <displayFormat>P-Question-{0000}/{MMYY}</displayFormat>
        <label>Project Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>