unpackaged/main/default/objects/Project_Questions__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Customers answer</description>
    <inlineHelpText>Customer answer</inlineHelpText>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>