unpackaged/main/default/objects/Project_Questions__c/fields/Answered_by__c.field-meta.xml
<CustomField>
    <fullName>Answered_by__c</fullName>
    <description>Who answered the question?</description>
    <inlineHelpText>Who answered the question?</inlineHelpText>
    <label>Answered by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>