unpackaged/main/default/objects/Project_Questions__c/fields/DateAnswered__c.field-meta.xml
<CustomField>
    <fullName>DateAnswered__c</fullName>
    <description>Date question was answered</description>
    <inlineHelpText>Date question was answered</inlineHelpText>
    <label>Date Answered</label>
    <type>Date</type>
</CustomField>