unpackaged/main/default/objects/Project_Questions__c/fields/DateRaisedtoCustomer__c.field-meta.xml
<CustomField>
    <fullName>DateRaisedtoCustomer__c</fullName>
    <description>Date question was raised to the customer</description>
    <inlineHelpText>Date question was raised to the customer</inlineHelpText>
    <label>Date Raised to Customer</label>
    <type>Date</type>
</CustomField>