unpackaged/main/default/objects/Project_Questions__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>inspire1__Project__c.Name</field>
            <operation>equals</operation>
            <valueField>inspire1__Project__c.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Project Questions</relationshipLabel>
    <relationshipName>Project_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>