unpackaged/main/default/objects/Project_Questions__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Our question to the customer</description>
    <inlineHelpText>Our question to the customer</inlineHelpText>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>