unpackaged/main/default/objects/Project_Questions__c/fields/RaisedbyRef__c.field-meta.xml
<CustomField>
    <fullName>RaisedbyRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who raised the question?</description>
    <inlineHelpText>Who raised the question?</inlineHelpText>
    <label>Raised by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>